a Unicode character is treated as a single symbol, not a sequence of
non-ASCII bytes as before.  Since Isabelle/ML string literals may
contain symbols without further backslash escapes, Unicode can now be
used here as well.  Recall that Symbol.explode in ML provides a
consistent view on symbols, while raw explode (or String.explode)
merely give a byte-oriented representation.


*** HOL ***

* code generator: export_code without explicit file declaration prints
to standard output.  INCOMPATIBILITY.

* Abolished symbol type names:  "prod" and "sum" replace "*" and "+"
respectively.  INCOMPATIBILITY.

* Constant "split" has been merged with constant "prod_case";  names
of ML functions, facts etc. involving split have been retained so far,
though.  INCOMPATIBILITY.

* Dropped old infix syntax "mem" for List.member;  use "in set"
instead.  INCOMPATIBILITY.

* Refactoring of code-generation specific operations in List.thy

  constants
    null ~> List.null

  facts
    mem_iff ~> member_def
    null_empty ~> null_def

INCOMPATIBILITY.  Note that these were not suppossed to be used
regularly unless for striking reasons;  their main purpose was code
generation.

* Some previously unqualified names have been qualified:

  types
    nat ~> Nat.nat

  constants
    Ball ~> Set.Ball
    Bex ~> Set.Bex
    Suc ~> Nat.Suc
    Pair ~> Product_Type.Pair
    fst ~> Product_Type.fst
    snd ~> Product_Type.snd
    curry ~> Product_Type.curry
    op : ~> Set.member
    Collect ~> Set.Collect

INCOMPATIBILITY.

* Removed simplifier congruence rule of "prod_case", as has for long
been the case with "split".

* Datatype package: theorems generated for executable equality
(class eq) carry proper names and are treated as default code
equations.

* List.thy: use various operations from the Haskell prelude when
generating Haskell code.

* code_simp.ML: simplification with rules determined by
code generator.

* code generator: do not print function definitions for case